# fadin

./: .env-sample  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
fadin/app/: api.py  asgi.py  auth.py  exceptions.py  schemas.py  settings.py  urls.py
fadin/ivo/: __init__.py  admin.py  api.py  apps.py  models.py  signals.py
fadin/ivo/migrations/: 0001_initial.py
fadin/other/: api.py  apps.py
fadin/users/: api.py  apps.py
fix/: auth.json  ivo.json
tests/: conftest.py  test-admin-site.py  test-api-ping-pong.py  test-ivo-list-invoices.py  test-login.py  test-users-count.py  test-users-create-via-api.py  test-users-create-via-orm.py  test-users-factory-boy.py
